Fix grid-settings max-width
Our container's max-width should not be 90%, it should be a sensible
px based max-width so our content never gets too wide on large screens.

Also, since our max-width is not 90%, I had to add the padding that it
gave us directly to the body.

--- a/static/stylesheets/base/_base.scss
+++ b/static/stylesheets/base/_base.scss
@@ -19,7 +19,7 @@ body {
     background-color: $base-background-color;
 
     margin: 0px;
-    padding: 0px;
+    padding: 0px 1em;
 }
 
 code {
